# crdb-dump

./: .gitignore  404.html  CHANGELOG.md  CLAUDE.md  README.md  index.html  mkdocs.yml  pyproject.toml  pytest.ini  sitemap.xml  test-local.sh
.github/workflows/: docs.yml  python-ci.yml  release.yml
about/changelog/: index.html
about/license/: index.html
crdb_dump/: cli.py
crdb_dump/export/: data.py  schema.py
crdb_dump/loader/: loader.py
crdb_dump/utils/: common.py  db_connection.py  identifiers.py  io.py  logging.py  s3.py  type_constants.py
crdb_dump/verify/: checksum.py  diff_utils.py
development/contributing/: index.html
development/releasing/: index.html
development/testing/: index.html
docs/: index.md
docs/about/: license.md
docs/development/: contributing.md  releasing.md  testing.md
docs/getting-started/: configuration.md  installation.md  quickstart.md
docs/guides/: export-data.md  export-schema.md  import-restore.md  index.md  migration-limitations.md  multi-schema.md  permissions.md  region-aware.md  s3-storage.md  type-handling.md
docs/recipes/: cross-env-copy.md  full-dump-restore.md  index.md  s3-round-trip.md  selective-tables.md  verify-resume.md
docs/reference/: cli.md  index.md  manifest-format.md  naming-model.md
docs/superpowers/plans/: 2026-06-26-as-of-system-time.md  2026-06-26-docs-site.md  2026-06-26-follower-reads.md  2026-06-26-schema-aware-overhaul.md
docs/superpowers/specs/: 2026-06-26-as-of-system-time-design.md  (+3 more)
getting-started/configuration/: index.html
getting-started/installation/: index.html
getting-started/quickstart/: index.html
guides/: index.html
guides/export-data/: index.html
guides/export-schema/: index.html
guides/import-restore/: index.html
guides/migration-limitations/: index.html
guides/multi-schema/: index.html
guides/permissions/: index.html
guides/region-aware/: index.html
guides/s3-storage/: index.html
guides/type-handling/: index.html
recipes/: index.html
recipes/cross-env-copy/: index.html
recipes/full-dump-restore/: index.html
recipes/s3-round-trip/: index.html
recipes/selective-tables/: index.html
recipes/verify-resume/: index.html
reference/: index.html
reference/cli/: index.html
reference/manifest-format/: index.html
reference/naming-model/: index.html
search/: search_index.json
tests/: docker-compose.yml  test_aost.py  test_checksum.py  test_collect_objects.py  test_data_export.py  test_db_connection.py  test_identifiers.py  test_integration.py  test_io_names.py  test_load_schema_split.py  test_schema_export.py  test_type_encoding.py  test_unit.py  test_vector.py
