[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "crdb-dump"
version = "0.6.0"
description = "A CLI tool to export and import schema definitions and data from CockroachDB in SQL, JSON, YAML, or chunked CSV formats."

authors = [
    { name="Virag Tripathi", email="virag.tripathi@gmail.com" }
]
license = "MIT"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Quality Assurance",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent"
]
dependencies = [
    "sqlalchemy>=2.0.51",
    "sqlalchemy-cockroachdb>=2.0.4",
    "click>=8.4.2",
    "pyyaml>=6.0.3",
    "psycopg2-binary>=2.9.12",
    "boto3>=1.43.36",
    "sqlparse>=0.5.5"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0"
]
docs = [
    "mkdocs-material[imaging]>=9.5",
    "mkdocs-click>=0.8",
    "pymdown-extensions>=10.7",
]

[project.scripts]
crdb-dump = "crdb_dump.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["crdb_dump*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q"
markers = [
    "integration: mark a test as requiring CockroachDB (e.g., Docker-based)",
]
